--- a/app/src/main/res/layout/view_add_restaurant.xml
+++ b/app/src/main/res/layout/view_add_restaurant.xml
@@ -2,19 +2,22 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginBottom="24dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <TextView
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
@@ -146,7 +149,7 @@
             android:fontFamily="sans-serif"
             android:hint="@string/fee_enter"
             android:imeOptions="actionNext"
-            android:inputType="text"
+            android:inputType="number"
             android:paddingLeft="16dp"
             android:textColor="@color/black"
             android:textColorHint="@color/btn_exit"/>
@@ -162,10 +165,10 @@
             android:layout_height="wrap_content" />
 
         <android.support.v7.widget.RecyclerView
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/rcv_type"
-            android:layout_gravity="center_vertical"
             android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
 
@@ -187,6 +190,7 @@
 
         <Button
             android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
             android:layout_gravity="bottom|center_horizontal"
